# origin-lens

./: .gitignore  CITATION.cff  README.md  privacy_policy.md
src/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
src/android/: build.gradle.kts
src/android/app/: build.gradle.kts
src/integration_test/: simple_test.dart
src/ios/: Podfile
src/ios/Flutter/: Debug.xcconfig  Release.xcconfig
src/ios/Runner/: Info.plist
src/ios/Runner.xcodeproj/: project.pbxproj
src/ios/ShareExtension/: ShareViewController.swift
src/lib/: main.dart
src/lib/screens/: analyze_view.dart  faq_view.dart  home_view.dart  main_screen.dart
src/lib/services/: c2pa_service.dart  reverse_image_search_service.dart  synthid_service.dart
src/lib/theme/: app_theme.dart
src/lib/widgets/: common_widgets.dart
src/linux/: CMakeLists.txt
src/linux/runner/: my_application.cc
src/macos/Runner.xcodeproj/: project.pbxproj
src/rust_builder/: LICENSE  cargokit.yaml  flutter_rust_bridge.yaml  pubspec.yaml
src/rust_builder/android/: build.gradle  settings.gradle
src/rust_builder/ios/: rust_lib_origin_lens.podspec
src/rust_builder/lib/: rust_lib_origin_lens.dart
src/rust_builder/linux/: CMakeLists.txt
src/rust_builder/macos/: rust_lib_origin_lens.podspec
src/rust_builder/rust/: Cargo.toml  README.md
src/rust_builder/rust/src/: frb_generated.rs  lib.rs
src/rust_builder/rust/src/api/: c2pa_reader.rs  mod.rs
src/rust_builder/windows/: CMakeLists.txt
src/test/: widget_test.dart
src/web/: index.html  manifest.json
src/windows/: CMakeLists.txt
(+14 files in other folders)
