[package]
name = "rust_lib_origin_lens"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
c2pa = { version = "0.32", features = ["unstable_api"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
kamadak-exif = "0.5"

[profile.release]
lto = true
opt-level = "z"
strip = true
